--- a/index.html
+++ b/index.html
@@ -107,22 +107,42 @@
           <h2 class="team-title title">Our Team</h2>
           <ul class="team-title-list">
             <li class="team-title-item">
-              <img src="./images/img-1.jpg" width="264" alt="Mark Guerrero" />
+              <img
+                class="team-image"
+                src="./images/img-1.jpg"
+                width="264"
+                alt="Mark Guerrero"
+              />
               <h3 class="team-subtitle">Mark Guerrero</h3>
               <p class="team-subtitle-text">Product Designer</p>
             </li>
             <li class="team-title-item">
-              <img src="./images/img-2.jpg" width="264" alt="Tom Ford" />
+              <img
+                class="team-image"
+                src="./images/img-2.jpg"
+                width="264"
+                alt="Tom Ford"
+              />
               <h3 class="team-subtitle">Tom Ford</h3>
               <p class="team-subtitle-text">Frontend Developer</p>
             </li>
             <li class="team-title-item">
-              <img src="./images/img-3.jpg" width="264" alt="Camila Garcia" />
+              <img
+                class="team-image"
+                src="./images/img-3.jpg"
+                width="264"
+                alt="Camila Garcia"
+              />
               <h3 class="team-subtitle">Camila Garcia</h3>
               <p class="team-subtitle-text">Marketing</p>
             </li>
             <li class="team-title-item">
-              <img src="./images/img-4.jpg" width="264" alt="Daniel Wilson" />
+              <img
+                class="team-image"
+                src="./images/img-4.jpg"
+                width="264"
+                alt="Daniel Wilson"
+              />
               <h3 class="team-subtitle">Daniel Wilson</h3>
               <p class="team-subtitle-text">UI Designer</p>
             </li>
@@ -136,6 +156,7 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <img
+                class="portfolio-image"
                 src="./images/BankingApp.jpg"
                 alt="Banking App"
                 width="360"
@@ -146,6 +167,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
+                class="portfolio-image"
                 src="./images/CashlessPayment.jpg"
                 alt="Cashless Payment"
                 width="360"
@@ -156,6 +178,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
+                class="portfolio-image"
                 src="./images/MeditationApp.jpg"
                 alt="Meditation App"
                 width="360"
@@ -166,6 +189,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
+                class="portfolio-image"
                 src="./images/TaxiService.jpg"
                 alt="TaxiService"
                 width="360"
@@ -176,6 +200,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
+                class="portfolio-image"
                 src="./images/ScreenIllustrations.jpg"
                 alt="ScreenIllustrations"
                 width="360"
@@ -186,6 +211,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
+                class="portfolio-image"
                 src="./images/OnlineCourses.jpg"
                 alt="OnlineCourses"
                 width="360"
@@ -201,7 +227,7 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container f">
         <a class="footer-logo" href="./index.html"
           >Web <span class="footer-logo-part">Studio</span></a
         >
