Added changes to sections

--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
                 width="264"
                 alt="Mark Guerrero"
               />
-              <h3 class="team-subtitle">Mark Guerrero</h3>
-              <p class="team-subtitle-text">Product Designer</p>
+              <div class="team-item-description">
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-subtitle-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-title-item">
               <img
@@ -123,8 +125,10 @@
                 width="264"
                 alt="Tom Ford"
               />
-              <h3 class="team-subtitle">Tom Ford</h3>
-              <p class="team-subtitle-text">Frontend Developer</p>
+              <div class="team-item-description">
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-subtitle-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-title-item">
               <img
@@ -133,8 +137,10 @@
                 width="264"
                 alt="Camila Garcia"
               />
-              <h3 class="team-subtitle">Camila Garcia</h3>
-              <p class="team-subtitle-text">Marketing</p>
+              <div class="team-item-description">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-subtitle-text">Marketing</p>
+              </div>
             </li>
             <li class="team-title-item">
               <img
@@ -143,8 +149,10 @@
                 width="264"
                 alt="Daniel Wilson"
               />
-              <h3 class="team-subtitle">Daniel Wilson</h3>
-              <p class="team-subtitle-text">UI Designer</p>
+              <div class="team-item-description">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-subtitle-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -162,8 +170,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-subtitle">Banking App</h3>
-              <p class="portfolio-title-text">App</p>
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Banking App</h3>
+                <p class="portfolio-title-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -173,8 +183,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-subtitle">Cashless Payment</h3>
-              <p class="portfolio-title-text">Marketing</p>
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                <p class="portfolio-title-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -184,8 +196,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-subtitle">Meditation App</h3>
-              <p class="portfolio-title-text">App</p>
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Meditation App</h3>
+                <p class="portfolio-title-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -195,8 +209,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-subtitle">Taxi Service</h3>
-              <p class="portfolio-title-text">Marketing</p>
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Taxi Service</h3>
+                <p class="portfolio-title-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -206,8 +222,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-              <p class="portfolio-title-text">Design</p>
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                <p class="portfolio-title-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -217,8 +235,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-subtitle">Online Courses</h3>
-              <p class="portfolio-title-text">Marketing</p>
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Online Courses</h3>
+                <p class="portfolio-title-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
